<resources>
    <string name="app_name">Quest App</string>

    <!-- Auth -->
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="email_hint">Email</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="register_link">Нет аккаунта? Зарегистрируйтесь</string>

    <!-- Profile -->
    <string name="profile_login">Логин: %s</string>
    <string name="profile_email">Email: %s</string>
    <string name="profile_points">Баллы: %d</string>
    <string name="profile_reg_date">Дата регистрации: %s</string>

    <!-- Events -->
    <string name="events_title">Мероприятия</string>
    <string name="event_location">Место: %s</string>
    <string name="event_date">Дата: %s</string>

    <!-- Team Member Selection -->
    <string name="select_team_members_title">Выберите участников команды</string>
    <string name="max_members_limit">Максимум участников: %d</string>
    <string name="selected_count">Выбрано: %d</string>
    <string name="select_at_least_one">Необходимо выбрать хотя бы одного участника</string>
    <string name="only_captain_can_register">Только капитан команды может регистрировать команду на мероприятие</string>
    <string name="team_registration_success">Команда успешно зарегистрирована на мероприятие!</string>
    <string name="create_team_dialog_title">Создание команды</string>
    <string name="create_team_dialog_message">У вас нет команды для участия в этом мероприятии. Хотите создать команду?</string>
    <string name="create_team_button">Создать</string>
    <string name="cancel_button">Отмена</string>
    <string name="confirm_button">Подтвердить</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="registered_button_text">Уже зарегистрированы</string>
    <string name="event_finished">Регистрация завершена</string>

    <!-- Navigation -->
    <string name="menu_events">Мероприятия</string>
    <string name="menu_profile">Профиль</string>

    <!-- Errors -->
    <string name="error_network">Ошибка сети</string>
    <string name="error_auth">Ошибка авторизации</string>
    <string name="error_register">Ошибка регистрации</string>
    <string name="error_load_events">Ошибка загрузки мероприятий</string>
    <string name="error_load_profile">Ошибка загрузки профиля</string>
    <string name="error_check_team">Ошибка проверки команды</string>
    <string name="error_team_registration">Ошибка регистрации команды на мероприятие</string>
    <string name="error_load_event">Ошибка загрузки мероприятия</string>
    <string name="need_login">Необходимо войти в систему</string>
    <string name="error_fill_all_fields">Заполните все поля</string>
    <string name="error_login_latin">Логин должен содержать только латинские буквы и цифры</string>
    <string name="error_email_format">Введите корректный email</string>
    <string name="error_password_length">Пароль должен быть не менее 6 символов</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_settings">Настройки профиля</string>
    <string name="title_activity_leaderboard">Таблица лидеров</string>
    <string name="title_activity_group">Группа</string>
    <string name="title_activity_create_group">Создание группы</string>
    <string name="title_activity_riddle">Загадки</string>
    <string name="only_captain_can_check">Проверку может проводить только капитан команды</string>
    <string name="check_button_text">Проверить</string>
</resources>